--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.24.0
-pandas==2.2.2
-numpy==1.26.0
-scikit-learn==1.3.2
-matplotlib==3.8.0
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+
